# mta-naughty-nice

./: README.md  daily_ridership.ipynb  deploy.sh  pyproject.toml  startup_services.sh
analysis_scripts/: additional_platform_time.sql  major_incidents.sql  ridership_calculation.sql  terminal_ontime_performance.sql
api_deployment/: deploy.sh
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/public/: data.json  subways.json
frontend/src/app/: globals.css  layout.tsx  main.tsx  page.tsx
frontend/src/app/[id]/: page.tsx
frontend/src/app/components/: month-toggle.tsx  text-block.tsx
nginx/: mtafastapi.service
src/: Procfile  app.py  db_service.py  main.py  postgres_orm.py
utilities/: download_mta_data.py  upload_to_db.py
