[tool.poetry]
name = "mta-naughty-nice"
version = "0.1.0"
description = ""
authors = ["hank shen <hank@localhank.io>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.32.0"
fastapi = "0.115.2"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
